[metadata]
name = sample_lib
author = tani-cat
url = https://www.github.com/tani-cat/sample_lib
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =sample_lib

[options.packages.find]
where = sample_lib

[options.entry_points]
console_scripts =
    samplelib = main:main

[flake8]
exclude = .git,.venv,docs,dust,__init__.py
ignore = W504,E501
max_length = 100
